--- a/src/styles.css
+++ b/src/styles.css
@@ -1,21 +1,117 @@
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  background: url(./img/body.jpg);
+  background-size: cover;
+  height: 100vh;
+}
+
 .header {
-   background: #687BF3;
-   color: white;
-   font-size: 24pt;
-   text-align: center;
-   padding: auto 20px;
+  background: url(./img/header.jpg);
+  background-size: cover;
+  color: white;
+  height: 200px;
+  width: 100%;
+  font-size: 24pt;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.header div {
+  text-transform: uppercase;
+  letter-spacing: 2pt;
+  border-bottom: 0.5px solid;
+}
+
+.content {
+  position: relative;
+  top: -40px;
+  background: #f8f9f9;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  border-radius: 15px;
+  width: 80%;
+  min-width: 390px;
+  font-size: 16pt;
+  font-weight: 600;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 30px 0;
 }
 
 .row {
-   display: flex;
-   justify-content: center;
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  flex-wrap: wrap;
+  text-align: center;
+  justify-content: center;
 }
 
 .column {
-   padding: 10px;
+  min-width: 50px;
+  flex: 1 1 auto;
+  margin: 10px;
+}
+
+.column__title {
+  margin-bottom: 10px;
+}
+
+#from_input {
+  height: 50px;
+  width: 200px;
+  box-sizing: border-box;
+  padding: 0 15px;
+  font-size: 16pt;
+  font-weight: 600;
+  border: 1px solid grey;
+  border-radius: 10px;
 }
 
 select {
-   width: 100px;
-   height: 30px
+  width: 200px;
+  height: 50px;
+  border-radius: 10px;
+  padding: 15px;
+}
+
+.result {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  background: #172371;
+  border-radius: 15px;
+  color: whitesmoke;
+  padding: 20px;
+  margin-top: 30px;
+}
+
+#to_input {
+  border: none;
+  font-size: 26pt;
+  text-align: center;
+  background: none;
+  color: #d0d3d4;
+  margin: 10px 0;
+}
+
+.date {
+  font-size: 10pt;
+}
+
+.footer {
+  background: #172371;
+  color: #f8f9f9;
+  text-align: center;
+  font-size: 14pt;
+  width: 100%;
+  height: 150px;
+  position: absolute;
+  bottom: 0;
+  padding: 20px;
 }
